feat: multiple versions of archetect image

--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -320,8 +320,15 @@ jobs:
           - name: archetect
             dockerfile: 2-archetect/bullseye/Dockerfile
             context: 2-archetect/bullseye
-            version_tag: "" # unused
+            version_tag: "latest"
             builder_image_tag_arg: "" # unused
+            image_tag_arg: "" # unused
+            variants: "linux/amd64,linux/arm64"
+          - name: archetect
+            dockerfile: 2-archetect/bullseye/Dockerfile
+            context: 2-archetect/bullseye
+            version_tag: "2"
+            builder_image_tag_arg: "v2.0.0"
             image_tag_arg: "" # unused
             variants: "linux/amd64,linux/arm64"
           - name: cloudflared
