--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -70,7 +70,7 @@ jobs:
             version_tag: nix
             dockerfile: 0-ede/nix/Dockerfile
             context: 0-ede/nix
-            variants: "linux/amd64" #,linux/arm64"
+            variants: "linux/amd64,linux/arm64"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
