--- a/2-archetect/bullseye/Dockerfile
+++ b/2-archetect/bullseye/Dockerfile
@@ -14,8 +14,7 @@ FROM ${REGISTRY_PREFIX}/debian:bullseye
 
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
-        git \
-        jq && \
+        git && \
     rm -rf /var/lib/apt/lists/*
 
 COPY --from=base /usr/local/bin/archetect /usr/local/bin/archetect
