--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -147,12 +147,12 @@ jobs:
         include:
           - name: ede
             version_tag: openvscode-server
-            dockerfile: 1-ede/vsc/Dockerfile.openvscode-server
+            dockerfile: 1-ede/vscode/Dockerfile.openvscode-server
             context: 1-ede/vscode
             version_arg: "1.102.3"
           - name: ede
             version_tag: code-server
-            dockerfile: 1-ede/vsc/Dockerfile.code-server
+            dockerfile: 1-ede/vscode/Dockerfile.code-server
             context: 1-ede/vscode
             version_arg: "4.102.3"
           - name: amazoncorretto
