--- a/1-ede/vscode/Dockerfile.code-server
+++ b/1-ede/vscode/Dockerfile.code-server
@@ -23,6 +23,6 @@ RUN /tmp/extensions-github.sh ${IDE} && \
     /tmp/extensions-openvsx.sh ${IDE} && \
     rm -f /tmp/extensions-openvsx.sh /tmp/extensions-github.sh && \
     echo "All extensions installed successfully." && \
-    rm -rf /tmp/extensions-openvsx.sh /tmp/extensions-github.sh 
+    sudo rm -rf /tmp/extensions-openvsx.sh /tmp/extensions-github.sh 
 
 CMD [ "${IDE}" ]
