set user-data-dir

--- a/1-ede/vscode/Dockerfile.code-server
+++ b/1-ede/vscode/Dockerfile.code-server
@@ -10,11 +10,13 @@ RUN ARCH=$(uname -m) && \
     esac && \
     URL="https://github.com/coder/code-server/releases/download/v${VERSION}/code-server-${VERSION}-linux-${ARCH_SUFFIX}.tar.gz" && \
     echo "Downloading: $URL" && \
-    sudo mkdir -p /vsc && \
+    sudo mkdir -p /vsc /vsc/extensions && \
+    sudo chown ede:staff /vsc /vsc/extensions && \
     curl -fsSL "$URL" | sudo tar -xz --strip-components=1 -C /vsc
 
-ENV PATH="/vsc/bin:$PATH"
-ENV IDE="code-server"
+ENV PATH="/vsc/bin:$PATH" \
+    IDE="code-server" \
+    CODE_SERVER_CONFIG="/vsc/config"
 
 COPY extensions-openvsx.sh /tmp/extensions-openvsx.sh
 COPY extensions-github.sh /tmp/extensions-github.sh
