use extensions-dir

--- a/1-ede/vscode/Dockerfile.openvscode-server
+++ b/1-ede/vscode/Dockerfile.openvscode-server
@@ -10,18 +10,19 @@ RUN ARCH=$(uname -m) && \
     esac && \
     URL="https://github.com/gitpod-io/openvscode-server/releases/download/openvscode-server-v${VERSION}/openvscode-server-v${VERSION}-linux-${ARCH_SUFFIX}.tar.gz" && \
     echo "Downloading: $URL" && \
-    sudo mkdir -p /vsc /vsc/extensions && \
-    sudo chown ede:staff /vsc /vsc/extensions && \
-    curl -fsSL "$URL" | sudo tar -xz --strip-components=1 -C /vsc
+    sudo mkdir -p /vsc && \
+    curl -fsSL "$URL" | sudo tar -xz --strip-components=1 -C /vsc && \
+    sudo chown -R ede:staff /vsc
 
 ENV PATH="/vsc/bin:$PATH"
 ENV IDE="openvscode-server"
-ENV OPENVSCODE_SERVER_CONFIG="/vsc/config"
 
 COPY extensions-openvsx.sh /tmp/extensions-openvsx.sh
 COPY extensions-github.sh /tmp/extensions-github.sh
 
-RUN /tmp/extensions-github.sh ${IDE} && \
+RUN mkdir -p /vsc/extensions && \
+    touch /vsc/extensions/extensions.json && \
+    /tmp/extensions-github.sh ${IDE} && \
     /tmp/extensions-openvsx.sh ${IDE} && \
     echo "All extensions installed successfully."
 
