--- a/1-nginx/bullseye/Dockerfile
+++ b/1-nginx/bullseye/Dockerfile
@@ -7,6 +7,7 @@ RUN apt-get update && \
     apt-get install -y --no-install-recommends gnupg ca-certificates libssl-dev && \
     echo "deb https://nginx.org/packages/debian/ bullseye nginx" >> /etc/apt/sources.list && \ 
     apt-key adv --keyserver keyserver.ubuntu.com --recv-keys ABF5BD827BD9BF62 && \
+    apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 2FD21310B49F6B46 && \
     apt-get update && \
     apt-get install nginx=$VERSION.\* -y --no-install-recommends && \
     apt-get autoremove -y && \
