--- a/1-ede/vscode/Dockerfile.vscode
+++ b/1-ede/vscode/Dockerfile.vscode
@@ -1,8 +1,8 @@
 ARG REGISTRY_PREFIX=ybor
 FROM $REGISTRY_PREFIX/ede:nix
 
-# ARM64: https://code.visualstudio.com/sha/download?build=insider&os=linux-arm64
-# AMD64: https://code.visualstudio.com/sha/download?build=insider&os=linux-x64
+# ARM64: https://code.visualstudio.com/sha/download?build=stable&os=linux-arm64
+# AMD64: https://code.visualstudio.com/sha/download?build=stable&os=linux-x64
 
 RUN ARCH=$(uname -m) && \
     case "$ARCH" in \
@@ -10,7 +10,7 @@ RUN ARCH=$(uname -m) && \
     aarch64) ARCH_SUFFIX="arm64" ;; \
     *) echo "Unsupported architecture: $ARCH" && exit 1 ;; \
     esac && \
-    URL="https://code.visualstudio.com/sha/download?build=insider&os=linux-$ARCH_SUFFIX" && \
+    URL="https://code.visualstudio.com/sha/download?build=stable&os=linux-$ARCH_SUFFIX" && \
     echo "Downloading: $URL" && \
     sudo mkdir -p /vsc && \
     curl -fsSL "$URL" | sudo tar -xz --strip-components=1 -C /vsc && \
@@ -32,9 +32,9 @@ RUN sudo apt-get update && sudo apt-get install --no-install-recommends -y \
     && sudo rm -rf /var/lib/apt/lists/*
 
 ENV PATH="/vsc/bin:$PATH" \
-    IDE="code-insiders"
+    IDE="code"
 
-RUN code-insiders --version
+RUN code --version
 
 COPY extensions-openvsx.sh /tmp/extensions-openvsx.sh
 COPY extensions-github.sh /tmp/extensions-github.sh
@@ -45,5 +45,9 @@ RUN mkdir -p /vsc/extensions && \
     /tmp/extensions-openvsx.sh ${IDE} && \
     echo "All extensions installed successfully."
 
-ENTRYPOINT [ "direnv", "exec", ".", "code-insiders", "serve-web" ]
+RUN jq '.extensionEnabledApiProposals["ybor-studio.ede-vscode"] = ["tunnels", "portsAttributes", "resolvers", "workspaceTrust"]' \
+    /vsc/resources/app/product.json | sponge /vsc/resources/app/product.json \
+    && echo "All extensions granted additional VSCode API permissions."
+
+ENTRYPOINT [ "direnv", "exec", ".", "code", "serve-web" ]
 # CMD [ "--auth", "none", "--port", "2999", "--extensions-dir", "/vsc/extensions", "--app-name", "VS Code (Web)" ]
