--- a/1-ede/vscode/Dockerfile.vscode
+++ b/1-ede/vscode/Dockerfile.vscode
@@ -1,21 +1,6 @@
 ARG REGISTRY_PREFIX=ybor
 FROM $REGISTRY_PREFIX/ede:nix
 
-# ARM64: https://code.visualstudio.com/sha/download?build=stable&os=linux-arm64
-# AMD64: https://code.visualstudio.com/sha/download?build=stable&os=linux-x64
-
-RUN ARCH=$(uname -m) && \
-    case "$ARCH" in \
-    x86_64) ARCH_SUFFIX="x64" ;; \
-    aarch64) ARCH_SUFFIX="arm64" ;; \
-    *) echo "Unsupported architecture: $ARCH" && exit 1 ;; \
-    esac && \
-    URL="https://code.visualstudio.com/sha/download?build=stable&os=linux-$ARCH_SUFFIX" && \
-    echo "Downloading: $URL" && \
-    sudo mkdir -p /vsc && \
-    curl -fsSL "$URL" | sudo tar -xz --strip-components=1 -C /vsc && \
-    sudo chown -R ede:staff /vsc
-
 # Install VS Code runtime dependencies
 RUN sudo apt-get update && sudo apt-get install --no-install-recommends -y \
     libglib2.0-0 \
@@ -30,6 +15,23 @@ RUN sudo apt-get update && sudo apt-get install --no-install-recommends -y \
     libasound2t64 \
     xvfb \
     && sudo rm -rf /var/lib/apt/lists/*
+
+# ARM64: https://code.visualstudio.com/sha/download?build=stable&os=linux-arm64
+# AMD64: https://code.visualstudio.com/sha/download?build=stable&os=linux-x64
+
+RUN ARCH=$(uname -m) && \
+    case "$ARCH" in \
+    x86_64) ARCH_SUFFIX="x64" ;; \
+    aarch64) ARCH_SUFFIX="arm64" ;; \
+    *) echo "Unsupported architecture: $ARCH" && exit 1 ;; \
+    esac && \
+    URL="https://code.visualstudio.com/sha/download?build=stable&os=linux-$ARCH_SUFFIX" && \
+    echo "Downloading: $URL" && \
+    sudo mkdir -p /vsc && \
+    curl -fsSL "$URL" | sudo tar -xz --strip-components=1 -C /vsc && \
+    sudo chown -R ede:staff /vsc && \
+    sudo chown root:root /vsc/chrome-sandbox && \
+    sudo chmod +4755 /vsc/chrome-sandbox
 
 ENV PATH="/vsc/bin:$PATH" \
     IDE="code"
