--- a/1-ede/vscode/Dockerfile.vscode
+++ b/1-ede/vscode/Dockerfile.vscode
@@ -1,8 +1,26 @@
 ARG REGISTRY_PREFIX=ybor
 FROM $REGISTRY_PREFIX/ede:nix
 
-# ARM64: https://update.code.visualstudio.com/latest/server-linux-arm64/stable
-# AMD64: https://update.code.visualstudio.com/latest/server-linux-x64/stable
+RUN sudo apt-get update && sudo apt-get install --no-install-recommends -y \
+    libglib2.0-0 \
+    libnspr4 \
+    libnss3 \
+    libdbus-1-3 \
+    libatk1.0-0 \
+    libatk-bridge2.0-0 \
+    libcairo2 \
+    libgtk-3-0 \
+    libgbm1 \
+    libasound2t64 \
+    xvfb \
+    && sudo rm -rf /var/lib/apt/lists/*
+
+# ARM64: 
+#   code: https://code.visualstudio.com/sha/download?build=stable&os=linux-arm64
+#   code-server: https://update.code.visualstudio.com/latest/server-linux-arm64/stable
+# AMD64: 
+#   code: https://code.visualstudio.com/sha/download?build=stable&os=linux-arm64
+#   code-server: https://update.code.visualstudio.com/latest/server-linux-amd64/stable
 
 RUN ARCH=$(uname -m) && \
     case "$ARCH" in \
@@ -10,23 +28,28 @@ RUN ARCH=$(uname -m) && \
     aarch64) ARCH_SUFFIX="arm64" ;; \
     *) echo "Unsupported architecture: $ARCH" && exit 1 ;; \
     esac && \
+    sudo mkdir -p /code /code-server && \
     URL="https://update.code.visualstudio.com/latest/server-linux-$ARCH_SUFFIX/stable" && \
     echo "Downloading: $URL" && \
-    sudo mkdir -p /vsc && \
-    curl -fsSL "$URL" | sudo tar -xz --strip-components=1 -C /vsc && \
-    sudo chown -R ede:staff /vsc
+    curl -fsSL "$URL" | sudo tar -xz --strip-components=1 -C /code-server && \
+    sudo chown -R ede:staff /code-server && \
+    URL="https://code.visualstudio.com/sha/download?build=stable&os=linux-$ARCH_SUFFIX" && \
+    echo "Downloading: $URL" && \
+    curl -fsSL "$URL" | sudo tar -xz --strip-components=1 -C /code && \
+    sudo chown -R ede:staff /code
 
-ENV PATH="/vsc/bin:$PATH" \
+ENV PATH="/code/bin:/code-server/bin:$PATH" \
     ELECTRON_RUN_AS_NODE=1 \
-    IDE="code-server"
+    IDE="code"
 
 RUN code-server --version
+RUN code --version
 
 COPY extensions-github.sh /tmp/extensions-github.sh
 COPY extensions-marketplace.sh /tmp/extensions-marketplace.sh
 
-RUN mkdir -p /vsc/extensions && \
-    touch /vsc/extensions/extensions.json && \
+RUN mkdir -p /${IDE}/extensions && \
+    touch /${IDE}/extensions/extensions.json && \
     /tmp/extensions-github.sh ${IDE} && \
     /tmp/extensions-marketplace.sh ${IDE} && \
     echo "All extensions installed successfully."
