disable openvscode + code-server

--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -148,16 +148,16 @@ jobs:
             dockerfile: 1-ede/coder/Dockerfile
             context: 1-ede/coder
             version_arg: "2.22.1"
-          - name: ede
-            version_tag: openvscode-server
-            dockerfile: 1-ede/vscode/Dockerfile.openvscode-server
-            context: 1-ede/vscode
-            version_arg: "1.102.3"
-          - name: ede
-            version_tag: code-server
-            dockerfile: 1-ede/vscode/Dockerfile.code-server
-            context: 1-ede/vscode
-            version_arg: "4.102.3"
+          # - name: ede
+          #   version_tag: openvscode-server
+          #   dockerfile: 1-ede/vscode/Dockerfile.openvscode-server
+          #   context: 1-ede/vscode
+          #   version_arg: "1.102.3"
+          # - name: ede
+          #   version_tag: code-server
+          #   dockerfile: 1-ede/vscode/Dockerfile.code-server
+          #   context: 1-ede/vscode
+          #   version_arg: "4.102.3"
           - name: ede
             version_tag: vscode
             dockerfile: 1-ede/vscode/Dockerfile.vscode
