--- a/1-ede/vscode/Dockerfile.vscode
+++ b/1-ede/vscode/Dockerfile.vscode
@@ -1,26 +1,10 @@
 ARG REGISTRY_PREFIX=ybor
 FROM $REGISTRY_PREFIX/ede:nix
 
-RUN sudo apt-get update && sudo apt-get install --no-install-recommends -y \
-    libglib2.0-0 \
-    libnspr4 \
-    libnss3 \
-    libdbus-1-3 \
-    libatk1.0-0 \
-    libatk-bridge2.0-0 \
-    libcairo2 \
-    libgtk-3-0 \
-    libgbm1 \
-    libasound2t64 \
-    xvfb \
-    && sudo rm -rf /var/lib/apt/lists/*
-
-# ARM64: 
-#   code: https://code.visualstudio.com/sha/download?build=stable&os=linux-arm64
-#   code-server: https://update.code.visualstudio.com/latest/server-linux-arm64/stable
-# AMD64: 
-#   code: https://code.visualstudio.com/sha/download?build=stable&os=linux-arm64
-#   code-server: https://update.code.visualstudio.com/latest/server-linux-amd64/stable
+# code-server
+# TODO: look up sha from github releases
+# AMD64: https://vscode.download.prss.microsoft.com/dbazure/download/stable/6f17636121051a53c88d3e605c491d22af2ba755/vscode-server-linux-x64-web.tar.gz
+# ARM64: https://vscode.download.prss.microsoft.com/dbazure/download/stable/6f17636121051a53c88d3e605c491d22af2ba755/vscode-server-linux-arm64-web.tar.gz
 
 RUN ARCH=$(uname -m) && \
     case "$ARCH" in \
@@ -28,22 +12,16 @@ RUN ARCH=$(uname -m) && \
     aarch64) ARCH_SUFFIX="arm64" ;; \
     *) echo "Unsupported architecture: $ARCH" && exit 1 ;; \
     esac && \
-    sudo mkdir -p /code /code-server && \
-    URL="https://update.code.visualstudio.com/latest/server-linux-$ARCH_SUFFIX/stable" && \
+    sudo mkdir -p /code && \
+    URL="https://vscode.download.prss.microsoft.com/dbazure/download/stable/6f17636121051a53c88d3e605c491d22af2ba755/vscode-server-linux-$ARCH_SUFFIX-web.tar.gz" && \
     echo "Downloading: $URL" && \
     curl -fsSL "$URL" | sudo tar -xz --strip-components=1 -C /code-server && \
-    sudo chown -R ede:staff /code-server && \
-    URL="https://code.visualstudio.com/sha/download?build=stable&os=linux-$ARCH_SUFFIX" && \
-    echo "Downloading: $URL" && \
-    curl -fsSL "$URL" | sudo tar -xz --strip-components=1 -C /code && \
-    sudo chown -R ede:staff /code
+    sudo chown -R ede:staff /code-server
 
-ENV PATH="/code/bin:/code-server/bin:$PATH" \
-    ELECTRON_RUN_AS_NODE=1 \
-    IDE="code"
+ENV PATH="/code-server/bin:$PATH" \
+    IDE="code-server"
 
 RUN code-server --version
-RUN code --version
 
 COPY extensions-github.sh /tmp/extensions-github.sh
 COPY extensions-marketplace.sh /tmp/extensions-marketplace.sh
