--- a/1-ede/vscode/Dockerfile.vscode
+++ b/1-ede/vscode/Dockerfile.vscode
@@ -12,7 +12,7 @@ RUN ARCH=$(uname -m) && \
     aarch64) ARCH_SUFFIX="arm64" ;; \
     *) echo "Unsupported architecture: $ARCH" && exit 1 ;; \
     esac && \
-    sudo mkdir -p /code && \
+    sudo mkdir -p /code-server && \
     URL="https://vscode.download.prss.microsoft.com/dbazure/download/stable/6f17636121051a53c88d3e605c491d22af2ba755/vscode-server-linux-$ARCH_SUFFIX-web.tar.gz" && \
     echo "Downloading: $URL" && \
     curl -fsSL "$URL" | sudo tar -xz --strip-components=1 -C /code-server && \
