[keycloak] override libkeycloak.sh

--- a/2-keycloak/26/Dockerfile
+++ b/2-keycloak/26/Dockerfile
@@ -5,7 +5,10 @@ FROM bitnami/keycloak:26
 USER root
 RUN apt-get update && \
     apt-get upgrade -y && \
-    rm -rf /var/lib/apt/lists/*
+    rm -rf /var/lib/apt/lists/* && \
+    # Overrides:
+    mv /opt/bitnami/scripts/libkeycloak.sh /opt/bitnami/scripts/libkeycloak-ext.sh
 
+COPY rootfs/opt/bitnami/scripts/libkeycloak.sh /opt/bitnami/scripts/libkeycloak.sh
 USER 1001
 ENV DISABLE_WELCOME_MESSAGE=true
