--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -422,6 +422,14 @@ jobs:
             builder_image_tag_arg: "" # unused
             image_tag_arg: "" # Alpine base image
             variants: "linux/amd64,linux/arm64"
+          - name: keycloak
+            version_tag: "26.3.1-debian-12-r2"
+            dockerfile: 2-keycloak/26.3.1-debian-12-r2/Dockerfile
+            context: 2-keycloak/26.3.1-debian-12-r2
+            version_arg: "" # unused
+            builder_image_tag_arg: "" # unused
+            image_tag_arg: "" # Alpine base image
+            variants: "linux/amd64,linux/arm64"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
