--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -416,8 +416,8 @@ jobs:
             variants: "linux/amd64,linux/arm64"
           - name: keycloak
             version_tag: "26"
-            dockerfile: 2-keycloak/26/Dockerfile
-            context: 2-keycloak/26
+            dockerfile: 2-keycloak/26.3.1-debian-12-r2/Dockerfile
+            context: 2-keycloak/26.3.1-debian-12-r2
             version_arg: "" # unused
             builder_image_tag_arg: "" # unused
             image_tag_arg: "" # Alpine base image
