install code-insiders

--- a/0-ede/nix/Dockerfile
+++ b/0-ede/nix/Dockerfile
@@ -5,6 +5,7 @@ RUN apt-get update && apt-get install -y \
     bash \
     ca-certificates \
     curl \
+    wget \
     direnv \
     git \
     gnupg \
