--- a/1-ede/vscode/Dockerfile.vscode
+++ b/1-ede/vscode/Dockerfile.vscode
@@ -9,6 +9,14 @@ FROM $REGISTRY_PREFIX/ede:nix
 # Increment this to invalidate the docker cache
 ENV CACHE_BUST=4
 
+RUN wget -qO- https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > packages.microsoft.gpg && \
+    install -D -o root -g root -m 644 packages.microsoft.gpg /etc/apt/keyrings/packages.microsoft.gpg && \
+    sh -c 'echo "deb [arch=amd64,arm64,armhf signed-by=/etc/apt/keyrings/packages.microsoft.gpg] https://packages.microsoft.com/repos/code stable main" > /etc/apt/sources.list.d/vscode.list' && \
+    rm -f packages.microsoft.gpg && \
+    sudo apt-get update && \
+    sudo apt-get install -y code-insiders && \
+    sudo rm -rf /var/lib/apt/lists/*
+
 RUN ARCH=$(uname -m) && \
     case "$ARCH" in \
     x86_64) ARCH_SUFFIX="x64" ;; \
