[dind] create a init script to set up networking

--- a/2-docker/dind/Dockerfile
+++ b/2-docker/dind/Dockerfile
@@ -3,10 +3,15 @@ FROM docker:dind
 RUN apk update && \
     apk upgrade --no-cache && \
     apk add --no-cache \
-        iptables \
-        iproute2 \
-        iputils \
-        busybox-extras \
-        bind-tools \
-        curl \
-        wget
+    iptables \
+    iproute2 \
+    iputils \
+    busybox-extras \
+    bind-tools \
+    curl \
+    wget \
+    bash \
+    sudo
+
+COPY ./init.sh /init.sh
+ENTRYPOINT [ "/init.sh" ]
