[dind] install and start dnsmasq

--- a/2-docker/dind/Dockerfile
+++ b/2-docker/dind/Dockerfile
@@ -11,7 +11,8 @@ RUN apk update && \
     curl \
     wget \
     bash \
-    sudo
+    sudo \
+    dnsmasq
 
 COPY ./init.sh /init.sh
 ENTRYPOINT [ "/init.sh" ]
