--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -338,15 +338,8 @@ jobs:
           #   image_tag_arg: "bullseye" # latest version of rust
           #   variants: "linux/amd64,linux/arm64"
           - name: archetect
-            dockerfile: 2-archetect/bullseye/Dockerfile
-            context: 2-archetect/bullseye
-            version_tag: "latest"
-            builder_image_tag_arg: "" # unused
-            image_tag_arg: "" # unused
-            variants: "linux/amd64,linux/arm64"
-          - name: archetect
-            dockerfile: 2-archetect/bullseye/Dockerfile
-            context: 2-archetect/bullseye
+            dockerfile: 2-archetect/Dockerfile
+            context: 2-archetect
             version_tag: "2"
             builder_image_tag_arg: "v2.0.7" # TODO UNPIN THIS
             image_tag_arg: "" # unused
