more packages and changes based on review

--- a/2-archetect/Dockerfile
+++ b/2-archetect/Dockerfile
@@ -1,9 +1,10 @@
 ARG REGISTRY_PREFIX=ybor
 FROM ${REGISTRY_PREFIX}/debian:trixie-slim
 
+# DEVNOTE: the following packages are intentionally included to support various Archetect features and or archetect-based workflows.
 RUN apt-get update && \
   apt-get install -y --no-install-recommends \
-  git curl wget ca-certificates yq jq && \
+  git curl wget ca-certificates yq jq unzip gpg libssl-dev tzdata && \
   rm -rf /var/lib/apt/lists/*
 
 # ARM64: https://github.com/archetect/archetect/releases/download/v2.0.7/archetect-v2.0.7-linux-arm64.tar.gz
@@ -27,4 +28,4 @@ RUN set -eux; \
   archetect --version;
 
 ENTRYPOINT ["/usr/local/bin/archetect"]
-CMD ["--version"]
+CMD ["--help"]
